# mlflow-oss-databricks-apps

./: CLAUDE.md  README.md  app.yaml  build_mlflow_ui_assets.sh  deploy.sh  list_mlflow_versions.py  pyproject.toml  requirements.txt  start_mlflow.py  start_mlflow.sh
.claude/commands/: setup-mlflow.md
docs/: design.md  product.md
mlflow-ui-assets/: asset-manifest.json  index.html
mlflow-ui-assets/static/js/: 278.ef0f3856.chunk.js  6019.9025341e.chunk.js  7166.37e235b1.chunk.js  7544.367713d7.chunk.js  7544.3b264526.chunk.js  7544.536b0c9e.chunk.js  7544.5b083b54.chunk.js  7544.5f2bfe85.chunk.js  7544.69ef73fc.chunk.js  7544.8211d713.chunk.js  7544.9ac6b0f0.chunk.js  7544.a45c6a7d.chunk.js  7544.c40601f8.chunk.js  7544.ce87759f.chunk.js  7544.f043efe5.chunk.js  7681.82f5623b.chunk.js  experimentPage.3d32b863.chunk.js  main.1c44f3c0.js  main.1cd933f9.js  main.35b15106.js  main.393c3420.js  main.4e19f0d2.js  main.6f8d5db3.js  main.736135a6.js  main.95031016.js  main.ad9cfd2f.js  main.b056193a.js  main.b7395456.js  main.e0726c6a.js
scripts/: __init__.py  generate_semver_requirements.py
